updates to style and grid, added new font

--- a/code/index.html
+++ b/code/index.html
@@ -2,13 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Crypto Financial Solutions</title>
+    <title>Stargaze News</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="./transfonter.org-20240821-111631.zip" rel="stylesheet" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Montserrat:wght@300;400;600&display=swap"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       rel="stylesheet"
     />
   </head>
@@ -16,16 +15,18 @@
     <header>
       <nav class="top-menu">
         <div class="title-bar">
-          <img src="./assets/Y2k-Star-PNG.png" class="logo" />
-          <h1>Weekly Stargaze</h1>
+          <h2>STARGAZE</h2>
         </div>
         <ul class="nav-list">
           <li><a href="#home">Home</a></li>
-          <li><a href="#invest">Invest</a></li>
+          <li>
+            <a href="#invest">News</a>
+          </li>
           <li><a href="#community">Community</a></li>
-          <li><a href="#blog">Blog</a></li>
-          <li><a href="#membership">Membership</a></li>
         </ul>
+        <div class="hamburger-menu">
+          <i class="fa-solid fa-bars"></i>
+        </div>
       </nav>
 
       <section class="hero">
@@ -36,8 +37,121 @@
           Your go-to guide for celestial events, star charts, and stargazing
           tips.
         </p>
-        <a href="#" class="cta-button">Browse stargazing near you</a>
+        <a href="#" class="cta-button">Browse Events</a>
+        <img
+          src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/175711/glasses.jpg"
+          class="header-img"
+        />
       </section>
     </header>
+    <div class="premble">
+      <p>
+        STARGAZE _____ STARGAZE ––––– STARGAZE _____ STARGAZE ––––– STARGAZE
+        _____ STARGAZE ––––– STARGAZE _____ STARGAZE ––––– STARGAZE _____
+        STARGAZE ––––– STARGAZE _____ STARGAZE
+      </p>
+    </div>
+    <div class="container">
+      <div class="box zero">
+        <img src="/code/assets/pexels-felixmittermeier-956981.jpg" />
+      </div>
+      <div class="box one">
+        <img src="assets/mateusz-klein-o0QFy74qOQo-unsplash.jpg" />
+      </div>
+      <div class="box two">
+        <img src="/code/assets/mateusz-klein-P1gMYzbjY0I-unsplash.jpg" />
+      </div>
+      <div class="box three">
+        <img src="/code/assets/sina-katirachi-EP4ccdDJM1w-unsplash.jpg" />
+      </div>
+      <div class="box four">
+        <img src="/code/assets/mateusz-klein-KNfCM_NAKHM-unsplash.jpg" />
+      </div>
+      <div class="box five">
+        <img
+          src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/175711/glasses.jpg"
+        />
+      </div>
+      <div class="box six">
+        <h2>
+          Aurora Borealis Graces the Northern Skies – Spectacular Northern
+          Lights Dance Over Europe!
+        </h2>
+      </div>
+      <div class="box seven">
+        <img src="/code/assets/pexels-felixmittermeier-956981.jpg" />
+
+        <img src="assets/mateusz-klein-o0QFy74qOQo-unsplash.jpg" />
+
+        <img src="/code/assets/mateusz-klein-P1gMYzbjY0I-unsplash.jpg" />
+
+        <img src="/code/assets/sina-katirachi-EP4ccdDJM1w-unsplash.jpg" />
+        <img src="/code/assets/pexels-felixmittermeier-956981.jpg" />
+
+        <img src="assets/mateusz-klein-o0QFy74qOQo-unsplash.jpg" />
+
+        <img src="/code/assets/mateusz-klein-P1gMYzbjY0I-unsplash.jpg" />
+
+        <img src="/code/assets/sina-katirachi-EP4ccdDJM1w-unsplash.jpg" />
+        <img src="/code/assets/pexels-felixmittermeier-956981.jpg" />
+      </div>
+      <div class="box eight">
+        <h2>
+          International Space Station Passes Overhead – Watch Live as it Soars
+          Across Your Night Sky.
+        </h2>
+      </div>
+    </div>
   </body>
+  <footer>
+    <div class="footer-bottom">
+      <p>
+        &copy; 2024 Mika Eberstein. All Rights Reserved.
+        <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+        <a href="https://www.twitter.com" target="_blank">Twitter</a>
+        <a href="https://www.github.com" target="_blank">GitHub</a>
+      </p>
+    </div>
+  </footer>
 </html>
+
+<!-- 
+<h2>
+  International Space Station Passes Overhead – Watch Live as it Soars Across
+  Your Night Sky.
+</h2>
+/
+
+<h1>Spectacular Perseid Meteor Shower Lights Up the Night Sky</h1>
+<p>
+  Stargazers around the world were treated to a dazzling display of celestial
+  fireworks as the annual Perseid meteor shower peaked over the weekend. Known
+  for being one of the most prolific meteor showers of the year, the Perseids
+  brought hundreds of bright meteors streaking across the night sky, with many
+  observers reporting up to 60 meteors per hour during the peak.
+  <br />
+
+  This year’s Perseid shower coincided with a new moon, creating ideal viewing
+  conditions with darker skies enhancing the visibility of the meteors. The
+  event took place between the evening of August 12 and the early hours of
+  August 13, with meteors appearing to radiate from the constellation Perseus in
+  the northeastern sky.
+  <br />
+  Observers in both the Northern and Southern Hemispheres were able to witness
+  the event, though those in the Northern Hemisphere were favored with more
+  meteors visible. Enthusiasts gathered in parks, rural areas, and remote
+  locations far from city lights to capture the event through photography,
+  time-lapse videos, and even live streams shared with millions across the
+  globe. For those who missed this year’s peak, don’t worry – the Perseids
+  return every August, offering a consistent annual spectacle for stargazers
+  everywhere.
+</p>
+
+<h2>
+  Rare ‘Blue Supermoon’ to Rise at the End of August – A Stunning Lunar Event!
+</h2>
+
+<h2>
+  NASA’s James Webb Telescope Unveils Stunning New Images of Distant Galaxies.
+</h2>
+-->
