--- a/code/index.html
+++ b/code/index.html
@@ -53,19 +53,19 @@
     </div>
     <div class="container">
       <div class="box zero">
-        <img src="/code/assets/pexels-felixmittermeier-956981.jpg" />
+        <img src="/code/assets/starsbig.jpeg" />
       </div>
       <div class="box one">
         <img src="assets/mateusz-klein-o0QFy74qOQo-unsplash.jpg" />
       </div>
       <div class="box two">
-        <img src="/code/assets/mateusz-klein-P1gMYzbjY0I-unsplash.jpg" />
+        <img src="/code/assets/stone.jpg" />
       </div>
       <div class="box three">
-        <img src="/code/assets/sina-katirachi-EP4ccdDJM1w-unsplash.jpg" />
+        <img src="/code/assets/house.jpg" />
       </div>
       <div class="box four">
-        <img src="/code/assets/mateusz-klein-KNfCM_NAKHM-unsplash.jpg" />
+        <img src="/code/assets/northernlights.jpg" />
       </div>
       <div class="box five">
         <img
@@ -83,17 +83,16 @@
 
         <img src="assets/mateusz-klein-o0QFy74qOQo-unsplash.jpg" />
 
-        <img src="/code/assets/mateusz-klein-P1gMYzbjY0I-unsplash.jpg" />
+        <img src="/code/assets/stone.jpg" />
 
-        <img src="/code/assets/sina-katirachi-EP4ccdDJM1w-unsplash.jpg" />
+        <img src="/code/assets/house.jpg" />
         <img src="/code/assets/pexels-felixmittermeier-956981.jpg" />
 
         <img src="assets/mateusz-klein-o0QFy74qOQo-unsplash.jpg" />
 
-        <img src="/code/assets/mateusz-klein-P1gMYzbjY0I-unsplash.jpg" />
+        <img src="/code/assets/stone.jpg" />
 
-        <img src="/code/assets/sina-katirachi-EP4ccdDJM1w-unsplash.jpg" />
-        <img src="/code/assets/pexels-felixmittermeier-956981.jpg" />
+        <img src="/code/assets/house.jpg" />
       </div>
       <div class="box eight">
         <h2>
