new image formatting

--- a/code/index.html
+++ b/code/index.html
@@ -79,20 +79,20 @@
         </h2>
       </div>
       <div class="box seven">
-        <img src="/code/assets/pexels-felixmittermeier-956981.jpg" />
+        <img src="/assets/pexels-felixmittermeier-956981.jpg" />
 
         <img src="assets/mateusz-klein-o0QFy74qOQo-unsplash.jpg" />
 
-        <img src="/code/assets/stone.jpg" />
+        <img src="/assets/stone.jpg" />
 
-        <img src="/code/assets/house.jpg" />
-        <img src="/code/assets/pexels-felixmittermeier-956981.jpg" />
+        <img src="/assets/house.jpg" />
+        <img src="/assets/pexels-felixmittermeier-956981.jpg" />
 
         <img src="assets/mateusz-klein-o0QFy74qOQo-unsplash.jpg" />
 
-        <img src="/code/assets/stone.jpg" />
+        <img src="/assets/stone.jpg" />
 
-        <img src="/code/assets/house.jpg" />
+        <img src="/assets/house.jpg" />
       </div>
       <div class="box eight">
         <h2>
