--- a/code/index.html
+++ b/code/index.html
@@ -53,19 +53,19 @@
     </div>
     <div class="container">
       <div class="box zero">
-        <img src="/code/assets/starsbig.jpeg" />
+        <img src="/assets/starsbig.jpeg" />
       </div>
       <div class="box one">
         <img src="assets/mateusz-klein-o0QFy74qOQo-unsplash.jpg" />
       </div>
       <div class="box two">
-        <img src="/code/assets/stone.jpg" />
+        <img src="/assets/stone.jpg" />
       </div>
       <div class="box three">
-        <img src="/code/assets/house.jpg" />
+        <img src="/assets/house.jpg" />
       </div>
       <div class="box four">
-        <img src="/code/assets/northernlights.jpg" />
+        <img src="/assets/northernlights.jpg" />
       </div>
       <div class="box five">
         <img
