--- a/code/index.html
+++ b/code/index.html
@@ -46,26 +46,26 @@
     </header>
     <div class="premble">
       <p>
-        STARGAZE _____ STARGAZE ––––– STARGAZE _____ STARGAZE ––––– STARGAZE
+        ––– STARGAZE _____ STARGAZE ––––– STARGAZE _____ STARGAZE ––––– STARGAZE
         _____ STARGAZE ––––– STARGAZE _____ STARGAZE ––––– STARGAZE _____
-        STARGAZE ––––– STARGAZE _____ STARGAZE
+        STARGAZE ––––– STARGAZE
       </p>
     </div>
     <div class="container">
       <div class="box zero">
-        <img src="/assets/starsbig.jpeg" />
+        <img src="assets/starsbig.jpeg" />
       </div>
       <div class="box one">
         <img src="assets/mateusz-klein-o0QFy74qOQo-unsplash.jpg" />
       </div>
       <div class="box two">
-        <img src="/assets/stone.jpg" />
+        <img src="assets/stone.jpg" />
       </div>
       <div class="box three">
-        <img src="/assets/house.jpg" />
+        <img src="assets/house.jpg" />
       </div>
       <div class="box four">
-        <img src="/assets/northernlights.jpg" />
+        <img src="assets/northernlights.jpg" />
       </div>
       <div class="box five">
         <img
@@ -79,20 +79,20 @@
         </h2>
       </div>
       <div class="box seven">
-        <img src="/assets/pexels-felixmittermeier-956981.jpg" />
+        <img src="assets/pexels-felixmittermeier-956981.jpg" />
 
         <img src="assets/mateusz-klein-o0QFy74qOQo-unsplash.jpg" />
 
-        <img src="/assets/stone.jpg" />
+        <img src="assets/stone.jpg" />
 
-        <img src="/assets/house.jpg" />
-        <img src="/assets/pexels-felixmittermeier-956981.jpg" />
+        <img src="assets/house.jpg" />
+        <img src="assets/pexels-felixmittermeier-956981.jpg" />
 
         <img src="assets/mateusz-klein-o0QFy74qOQo-unsplash.jpg" />
 
-        <img src="/assets/stone.jpg" />
+        <img src="assets/stone.jpg" />
 
-        <img src="/assets/house.jpg" />
+        <img src="assets/house.jpg" />
       </div>
       <div class="box eight">
         <h2>
