--- a/code/index.html
+++ b/code/index.html
@@ -7,15 +7,19 @@
   <title>Babies - Focused on parents</title>
   <link rel="stylesheet" href="./style.css" />
   <!-- dont forget the meta tag for responsiveness CHECK -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
 </head>
 
 <body>
   <header>
     <!-- Some kind of logo and navbar -->
-    <img class="logo-picture" src="assets/baby.png" alt="parent">
+    <img class="logo-picture" src="assets/Final-logo.png" alt="babies-logo">
 
     <ul>
+      <div class="hamburger-menu">
+        <i class="fa-solid fa-bars"></i>
+      </div>
       <a class="header-link link-1" href="https://www.google.se/">
         HOME
       </a>
@@ -29,86 +33,86 @@
         SIGN UP!
       </a>
     </ul>
+
   </header>
 
   <section class="big-news picture">
     <!-- The big news content -->
 
-    <img src="assets/babyroom.png" alt="Babyroom">
+    <img class="babyroom-picture" src="assets/babyroom.png" alt="Babyroom">
 
   </section>
 
 
   <section class="big-news content">
     <h1>Baby news</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt laudantium facilis assumenda
-      mollitiacupiditate nesciunt, iste dolore commodi. Alias voluptate architecto ipsum eum omnis odit quidem esse
-      voluptatibus velit ipsa.</p>
-    <button>View full article</button>
+    <p>The Adorable New Baby Trend Everyone’s Talking About! 🍼👶 Parents are buzzing over this sweet, cozy product
+      designed to make life with a little one even more delightful. It’s the must-have for every stylish baby!</p>
+    <a href="https://www.google.com">
+      <button>View full article</button></a>
 
   </section>
 
-  <section class="small-news 1">
-    <!-- The other news  -->
-
+  <a href="https://google.com" class="small-news 1">
     <img src="assets/play.webp" alt="Baby play">
-    <h3>News</h3>
+    <h3>Why playtime is important for infants</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 
-  </section>
+  </a>
 
-  <section class="small-news 2">
+  <a href="https://google.com" class="small-news 2">
     <img src="assets/sleeping.webp" alt="Baby sleeping">
-    <h3>News</h3>
+    <h3>Is your child getting enough sleep?</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 
-  </section>
+  </a>
 
-  <section class="small-news 3">
+  <a href="https://google.com" class="small-news 3">
     <img src="assets/stroller.webp" alt="Baby stroller">
-    <h3>News</h3>
+    <h3>Best strollers in 2024</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 
-  </section>
+  </a>
 
-  <section class="small-news 4">
+  <a href="https://google.com" class="small-news 4">
     <img src="assets/eating.webp" alt="Baby eating">
-    <h3>News</h3>
+    <h3>The new food hack</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 
-  </section>
+  </a>
 
-  <section class="small-news 5">
+  <a href="https://google.com" class="small-news 5">
     <img src="assets/babyfood.webp" alt="Baby food">
-    <h3>News</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+    <h3>Make a nutritious meal for your baby</h3>
+    <p>5 recipies with nutritious meals for your little one</p>
 
-  </section>
+  </a>
 
-  <section class="small-news 6">
+  <a href="https://google.com" class="small-news 6">
     <img src="assets/icecream.webp" alt="Baby eating icecream">
-    <h3>News</h3>
+    <h3>Ice cream, good or bad?</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 
-  </section>
+  </a>
 
-  <section class="small-news 7">
+  <a href="https://google.com" class="small-news 7">
     <img src="assets/toys.webp" alt="Toys">
-    <h3>News</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+    <h3>"Toys ar getting better and better"</h3>
+    <p>We had a roundtour in a childrens toys factory!</p>
 
-  </section>
+  </a>
 
-  <section class="small-news 8">
+  <a href="https://google.com" class="small-news 8">
     <img src="assets/nature.webp" alt="Baby in nature">
-    <h3>News</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+    <h3>Nature is healing</h3>
+    <p>Discover why your infant should be out two hours a day in the nature</p>
 
-  </section>
+  </a>
 
 
   <footer>
-    <h3>Denna sida är skapad av Emelie Nyberg Kedert</h3>
+    <h4>Created by Emelie Nyberg Kedert</h4>
+    <h4><i class="fa-brands fa-github"></i> EmelieNyberg</h4>
   </footer>
 
 
