--- a/code/index.html
+++ b/code/index.html
@@ -56,35 +56,35 @@
   <a href="https://google.com" class="small-news 1">
     <img src="assets/play.webp" alt="Baby play">
     <h3>Why playtime is important for infants</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+    <p>Studies show that babies need to play to feel good, see the rest of the study.</p>
 
   </a>
 
   <a href="https://google.com" class="small-news 2">
     <img src="assets/sleeping.webp" alt="Baby sleeping">
     <h3>Is your child getting enough sleep?</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+    <p>Three signs that your child needs more sleep.</p>
 
   </a>
 
   <a href="https://google.com" class="small-news 3">
     <img src="assets/stroller.webp" alt="Baby stroller">
     <h3>Best strollers in 2024</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+    <p>And which strollers you absolutely should not buy.</p>
 
   </a>
 
   <a href="https://google.com" class="small-news 4">
     <img src="assets/eating.webp" alt="Baby eating">
     <h3>The new food hack</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+    <p>The no1 fork everyone is talking about. But is it worth trying it?</p>
 
   </a>
 
   <a href="https://google.com" class="small-news 5">
     <img src="assets/babyfood.webp" alt="Baby food">
     <h3>Make a nutritious meal for your baby</h3>
-    <p>5 recipies with nutritious meals for your little one</p>
+    <p>5 recipies with nutritious meals for your little one.</p>
 
   </a>
 
@@ -105,7 +105,7 @@
   <a href="https://google.com" class="small-news 8">
     <img src="assets/nature.webp" alt="Baby in nature">
     <h3>Nature is healing</h3>
-    <p>Discover why your infant should be out two hours a day in the nature</p>
+    <p>Discover why your infant should be out two hours a day in the nature.</p>
 
   </a>
 
