ok so this is the final version

--- a/code/index.html
+++ b/code/index.html
@@ -91,7 +91,7 @@
   <a href="https://google.com" class="small-news 6">
     <img src="assets/icecream.webp" alt="Baby eating icecream">
     <h3>Ice cream, good or bad?</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+    <p>When is the right time to start introducing ice cream to infants? And is it really that bad?</p>
 
   </a>
 
