adds logo and hamburger menu to header

--- a/code/index.html
+++ b/code/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+
+<head>
+  <meta charset="utf-8" />
+  <!-- Change the title below -->
+  <title>Guitar Vibes Magazine</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- dont forget the meta tag for responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+  <header>
+
+    <div class="hamburger">
+      <div class="hamburger-layer"></div>
+      <div class="hamburger-layer"></div>
+      <div class="hamburger-layer"></div>
+    </div>
+
+    <div class="logo"><img src="./images/guitar-vibes-logo.jpg" alt="The Guitar Vibes Magazine logo">
+    </div>
+    <nav class="navbar">
+      <ul class="nav-menu">
+        <li><a href="#features">FEATURES</a></li>
+        <li><a href="#gear">GEAR</a></li>
+        <li><a href="#artists">ARTISTS</a></li>
+        <li><a href="#lessons">LESSONS</a></li>
+        <li class="subscribe"><a href="#subscribe">SUBSCRIBE</a></li>
+    </nav>
+  </header>
+
+  <main>
 
     <section class="big-news">
       <!-- The big news content -->
@@ -19,5 +40,12 @@
     <section class="">
       <!-- The other news  -->
     </section>
-  </body>
+  </main>
+
+  <footer>
+
+  </footer>
+
+</body>
+
 </html>
