adds photo and text to big-news

--- a/code/index.html
+++ b/code/index.html
@@ -19,7 +19,7 @@
       <div class="hamburger-layer"></div>
     </div>
 
-    <div class="logo"><img src="./images/guitar-vibes-logo.jpg" alt="The Guitar Vibes Magazine logo">
+    <div class="logo"><img src="./images/guitar-vibes.jpg" alt="The Guitar Vibes Magazine logo">
     </div>
     <nav class="navbar">
       <ul class="nav-menu">
@@ -35,7 +35,17 @@
 
     <section class="big-news">
       <!-- The big news content -->
+      <img class="big-image"
+        src="https://www.thebaltimorebanner.com/resizer/v2/GQ4H6GMNCNDWPHIXRF2HKAUDJ4.jpg?auth=985ef485cfc90bbe458efa1a429745d0aa3089e1b0fd6960e94c7cc912e10fc8&width=1104&height=729&smart=true&quality=90"
+        alt="Ari O'Neal performing with John Legend at the 2024 DNC">
+      <div class="text-content">
+        <h1>The Maryland Guitarist Who Outshined John Legend and Sheila E. at the DNC</h1>
+        <h3>And the public reaction to her electrifying performance that hailed her a "Shero" at the Democratic National
+          Convention</h3>
+        <p>BY TAJI BURRIS</p>
+      </div>
     </section>
+    <br>
 
     <section class="">
       <!-- The other news  -->
