update - images, styling, buttons

--- a/code/index.html
+++ b/code/index.html
@@ -37,27 +37,83 @@
       <!-- The big news content -->
       <div class="big-news-content-width">
         <div class="big-news-img">
-          <img src="./assets/stick-a-fork-in-me.jpg" alt="">
+          <img src="./assets/stick-a-fork-in-me-new.jpg" alt="">
         </div>
         <div class="big-news-text">
           <h1 class="header-news-h1">Stick a fork in me - i'm done</h1>
           <h3 class="header-news-h3">- How to cook vegetables properly</h3>
-          <p>Some text..</p>
-          <a href="" target="_blank"><button>Click me!</button></a>
+          <p>Cut your favorite vegetables into even pieces, spread them out on a baking sheet, and drizzle with olive oil. Season and roast in the oven until golden brown and tender. This method enhances the natural sweetness of the vegetables and gives them a delightful crispiness.</p>
+          <a href="#" target="_blank"><button class="big-news-btn">See recipe</button></a>
         </div>
       </div>
     </section>
 
+    <!-- Divider h2 -->
+    <h2 class="divider-h2">Read more about seasonal vegetalbles and the color it brings our life!</h2>
+
     <section class="small-box-news">
       <!-- The other news  -->
-       <div class="small-box-news-item">1</div>
-       <div class="small-box-news-item">2</div>
-       <div class="small-box-news-item">3</div>
-       <div class="small-box-news-item">4</div>
-       <div class="small-box-news-item">5</div>
-       <div class="small-box-news-item">6</div>
-       <div class="small-box-news-item">7</div>
-       <div class="small-box-news-item">8</div>
+       <div class="small-box-news-item">
+          <img src="./assets/vegetable_1.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
+          <h3>Fresh from the yard!</h3>
+          <p>Cabbage and peach.</p>
+          <a href="#" target="_blank"><button class="small-news-btn">Crisp and sweet!</button></a>
+       </div>
+
+       <div class="small-box-news-item">
+        <img src="./assets/vegetable_2.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
+        <h3>Mediterranean platter!</h3>
+        <p>Chickpeas and greek yoghurt.</p>
+        <a href="#" target="_blank"><button class="small-news-btn">Indulge!</button></a>
+       </div>
+
+       <div class="small-box-news-item">
+          <img src="./assets/vegetable_1.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
+          <h3>Fresh from the yard!</h3>
+          <p>Cabbage and peach.</p>
+          <a href="#" target="_blank"><button class="small-news-btn">Crisp and sweet!</button></a>
+       </div>
+
+       <div class="small-box-news-item">
+        <img src="./assets/vegetable_2.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
+        <h3>Mediterranean platter!</h3>
+        <p>Chickpeas and greek yoghurt.</p>
+        <a href="#" target="_blank"><button class="small-news-btn">Indulge!</button></a>
+       </div>
+
+       <div class="small-box-news-item">
+          <img src="./assets/vegetable_1.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
+          <h3>Fresh from the yard!</h3>
+          <p>Cabbage and peach.</p>
+          <a href="#" target="_blank"><button class="small-news-btn">Crisp and sweet!</button></a>
+       </div>
+
+       <div class="small-box-news-item">
+        <img src="./assets/vegetable_2.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
+        <h3>Mediterranean platter!</h3>
+        <p>Chickpeas and greek yoghurt.</p>
+        <a href="#" target="_blank"><button class="small-news-btn">Indulge!</button></a>
+       </div>
+
+       <div class="small-box-news-item">
+          <img src="./assets/vegetable_1.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
+          <h3>Fresh from the yard!</h3>
+          <p>Cabbage and peach.</p>
+          <a href="#" target="_blank"><button class="small-news-btn">Crisp and sweet!</button></a>
+       </div>
+
+       <div class="small-box-news-item">
+        <img src="./assets/vegetable_2.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
+        <h3>Mediterranean platter!</h3>
+        <p>Chickpeas and greek yoghurt.</p>
+        <a href="#" target="_blank"><button class="small-news-btn">Indulge!</button></a>
+       </div>
     </section>
+
+    <footer>
+      <div>
+        <p>All rights reserved</p>
+      </div>
+    </footer>
   </body>
 </html>
