--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,97 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
+<head>
+  <meta charset="utf-8" />
+  <!-- Change the title below -->
+  <title>Good News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- dont forget the meta tag for responsiveness - DONE-->
+</head>
+
+<body>
+  <header>
+    <section class="grid-header">
+      <img
+        src="https://img.freepik.com/free-vector/flower-smiling-retro-style_24908-82133.jpg?t=st=1724141030~exp=1724144630~hmac=370cf45a522e57a6322a1d1018ebc8b06f0e3695229d0aa6228a6c72a33ac639&w=740"
+        alt="flowerlogo" class="logo">
+      <div class="logo-site-name">
+        <h3>All Good News</h3>
+      </div>
+      <div class="nav-bar">
+        <nav>
+          <button class="hamburger">☰</button>
+          <ul class="nav-links">
+            <li><a href="#">The</a></li>
+            <li><a href="#">Nav</a></li>
+            <li><a href="#">Bar</a></li>
+          </ul>
+        </nav>
+      </div>
+    </section>
+  </header>
+
+
+  <section class="big-news-box">
+    <img
+      src="https://img.freepik.com/free-vector/news-concept-landing-page_23-2148203325.jpg?t=st=1724142919~exp=1724146519~hmac=007a07659080ca7653e97f5a14f9ac3e11aedc592bb6e082084bd081d3fe2783&w=740"
+      alt="bignewsimg" class="big-news-img">
+    <div class="big-news">
+      <h1>Local News Outlet Makes Shocking Discovery: They're Fake News!</h1>
+      <p class="big-ptext">Local news outlet accidentally reports on itself as "fake news." Reporters scrambling to find
+        real news to cover, while editors are frantically deleting the original article and issuing a retraction.</p>
       <!-- The big news content -->
-    </section>
+    </div>
+  </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+  <!--Här börjar SMALL NEWS CSS Grid-->
+  <section class="small-news-box">
+    <div class="small-news-img1"> <img
+        src="https://img.freepik.com/free-photo/creative-reels-composition_23-2149711507.jpg?t=st=1724148604~exp=1724152204~hmac=25f35a6ec4a447e34a994d6089c2290c71c768e546080a40b02815eab508a68a&w=826"
+        alt="smallnewsimg1" class="small-news-img"> </div>
+
+    <div class="small-news1">
+      <h2>iPhone Defies Gravity in Bizarre Incident</h2>
+      <p>Eyewitnesses described the phone as hovering motionless for several minutes before suddenly disappearing.</p>
+    </div>
+
+    <div class="small-news-img2">
+      <img
+        src="https://img.freepik.com/free-photo/homepage-concept-with-search-bar_23-2150040204.jpg?t=st=1724149189~exp=1724152789~hmac=f2a28d768267c48684d7554cf15c414ce4fe251d0bf90ca11cddd783dcefb91b&w=826"
+        alt="smallnewsimg2">
+    </div>
+
+    <div class="small-news2">
+      <h2>Google Search Results Vary by Device</h2>
+      <p>A recent study has revealed that Google search results can differ significantly depending on the device used to
+        conduct the search.</p>
+    </div>
+
+    <div class="small-news-img1"> <img
+        src="https://img.freepik.com/premium-photo/smiling-intelligent-girl-waiting-order-cafe_1262-11754.jpg?w=826"
+        alt="smallnewsimg3"> </div>
+
+    <div class="small-news1">
+      <h2>Coffee Shops: The New Love Hangouts</h2>
+      <p>Remember the days when people actually met face-to-face to find love? Well, it seems the old-fashioned way is
+        making a comeback.</p>
+    </div>
+
+    <div class="small-news-img2">
+      <img
+        src="https://img.freepik.com/free-photo/side-view-smiley-women-eating-ice-cream_23-2149735847.jpg?t=st=1724169607~exp=1724173207~hmac=5869ee27209a825ca491b86dd71f422a3fa22041e374110e22be41c771e82037&w=826"
+        alt="smallnewsimg4">
+    </div>
+
+    <div class="small-news2">
+      <h2>Swedish Doctors Prescribe Ice Cream for Happiness</h2>
+      <p>Forget pills and potions! Swedish doctors are ditching the traditional prescriptions and handing out cones
+        instead.</p>
+    </div>
+  </section>
+
+
+</body>
+
 </html>
