adds content to other-news

--- a/code/index.html
+++ b/code/index.html
@@ -35,19 +35,67 @@
 
     <section class="big-news">
       <!-- The big news content -->
-      <img class="big-image"
-        src="https://www.thebaltimorebanner.com/resizer/v2/GQ4H6GMNCNDWPHIXRF2HKAUDJ4.jpg?auth=985ef485cfc90bbe458efa1a429745d0aa3089e1b0fd6960e94c7cc912e10fc8&width=1104&height=729&smart=true&quality=90"
-        alt="Ari O'Neal performing with John Legend at the 2024 DNC">
+      <a href="https://www.thebaltimorebanner.com/culture/music/guitarist-dnc-ari-oneal-BKUASKAM4BHDVO2LVPUPX6PS6U/"
+        target="_blank">
+        <img class="big-image"
+          src="https://www.thebaltimorebanner.com/resizer/v2/GQ4H6GMNCNDWPHIXRF2HKAUDJ4.jpg?auth=985ef485cfc90bbe458efa1a429745d0aa3089e1b0fd6960e94c7cc912e10fc8&width=1104&height=729&smart=true&quality=90"
+          alt="Ari O'Neal performing with John Legend at the 2024 DNC">
+      </a>
       <div class="text-content">
-        <h1>The Maryland Guitarist Who Outshined John Legend and Sheila E. at the DNC</h1>
-        <h3>And the public reaction to her electrifying performance that hailed her a "Shero" at the Democratic National
-          Convention</h3>
+        <a href="https://www.thebaltimorebanner.com/culture/music/guitarist-dnc-ari-oneal-BKUASKAM4BHDVO2LVPUPX6PS6U/"
+          target="_blank">
+          <h1>The Maryland Guitarist Who Outshined John Legend and Sheila E. at the DNC</h1>
+        </a>
+        <h5>And public reaction to the electrifying performance that hailed her a "Shero" at the Democratic National
+          Convention</h5>
         <p>BY TAJI BURRIS</p>
       </div>
     </section>
-    <br>
 
-    <section class="">
+    <section class="other-news">
+      <a href="https://www.guitarworld.com/features/brian-may-guitar-world-2024-queen-guitarist-talks-gibson-freddie-mercury-and-tone"
+        target="_blank">
+        <img class="other-image" src="./images/brianmay.jpg" alt="Brian May performing">
+      </a>
+      <div class="other-text">
+        <a href="https://www.guitarworld.com/features/brian-may-guitar-world-2024-queen-guitarist-talks-gibson-freddie-mercury-and-tone"
+          target="_blank">
+          <h4>Brian May on His Songwriting Relationship with Freddie Mercury</h4>
+        </a>
+        <p>by Andrew Daly</p>
+      </div>
+
+      <a href="https://www.guitarplayer.com/lessons/teja-gerken-air-guitar" target="_blank">
+        <img class="other-image" src="./images/teja-gerken.jpg" alt="Teja Gerken with classical guitar">
+      </a>
+      <div class="other-text">
+        <a href="https://www.guitarplayer.com/lessons/teja-gerken-air-guitar" target="_blank">
+          <h4>Why Acoustic Fingerstyle Virtuoso Teja Gerken Recommends Playing Air Guitar</h4>
+        </a>
+        <p>by Jimmy Leslie</p>
+      </div>
+
+      <a href="https://www.guitarworld.com/news/kenny-petrie-britains-got-talent-audition" target="_blank">
+        <img class="other-image" src="./images/grandpa-shredder.jpg" alt="Grandpa performing">
+      </a>
+      <div class="other-text">
+        <a href="https://www.guitarworld.com/news/kenny-petrie-britains-got-talent-audition" target="_blank">
+          <h4>64-year-old Grandpa Shredder Goes Viral (Again) After His Van Halen-influenced Britain's Got Talent
+            Audition Resurfaces</h4>
+        </a>
+        <p>by Phil Weller</p>
+      </div>
+
+      <a href="https://www.guitarworld.com/news/carmen-vandenberg-on-jeff-beck-guitar-tone-test" target="_blank">
+        <img class="other-image" src="./images/carmen-vandenberg.jpg" alt="Carmen Vandenbreg performing">
+      </a>
+      <div class="other-text">
+        <a href="https://www.guitarworld.com/news/carmen-vandenberg-on-jeff-beck-guitar-tone-test" target="_blank">
+          <h4>Carmen Vandenburg Recalls Jeff Beck's Ultimate Tone Test</h4>
+        </a>
+        <p>by Janelle Borg</p>
+      </div>
+
       <!-- The other news  -->
     </section>
   </main>
