creates footer with social media icons and links

--- a/code/index.html
+++ b/code/index.html
@@ -100,8 +100,18 @@
     </section>
   </main>
 
-  <footer>
-
+  <footer class="footer">
+    <div class="social-media">
+      <a href="https://www.facebook.com/facebook/" class="social-icon"><img src="./images/facebook.png"
+          alt="Facebook"></a>
+      <a href="https://x.com/?mx=2" class="social-icon"><img src="./images/twitterx.png" alt="Twitter"></a>
+      <a href="https://www.instagram.com/" class="social-icon"><img src="./images/instagram.png" alt="Instagram"></a>
+      <a href="https://www.youtube.com/#!@" class="social-icon"><img src="./images/youtube.png" alt="You Tube"></a>
+      <a href="https://www.tiktok.com/explore" class="social-icon"><img src="./images/tiktok.png" alt="TikTok"></a>
+    </div>
+    <div class="footer-text">
+      <p>&copy; 2024 Guitar Vibes. All Rights Reserved.</p>
+    </div>
   </footer>
 
 </body>
