--- a/index.html
+++ b/index.html
@@ -11,19 +11,15 @@
 <body>
   <header>
     <!--<img
-      src="/Users/johanna.eriksson@schibsted.com/Desktop/project-news-site/project-news-site/Assets/Farmers_news_transparent.png"
+      src="/Users/johanna.eriksson@xxx/Desktop/project-news-site/project-news-site/Assets/Farmers_news_transparent.png"
       alt="Logo" style="width: 200px; height: auto;">
     <h1>Welcome to Farmer's news</h1>-->
-    <img
-      src="/Users/johanna.eriksson@schibsted.com/Desktop/project-news-site/project-news-site/Assets/Farmers_news_transparent.png"
-      alt="Logo" style="width: 200px; height: auto;">
+    <img src="assets/Farmers_news_transparent.png" alt="Logo" style="width: 200px; height: auto;">
   </header>
   <main>
     <section class="big-news">
       <!-- The big news content -->
-      <img
-        src="/Users/johanna.eriksson@schibsted.com/Desktop/project-news-site/project-news-site/Assets/FarmerJoey.webp"
-        alt="Award-Winning" />
+      <img src="assets/FarmerJoey.webp" alt="Award-Winning" />
       <div class="big-news-content">
         <h1>Award-Winning Farmer</h1>
         <p>A local Hero Honored for Agricultural Excellence. In a special ceremony, an elderly female farmer was
@@ -36,8 +32,7 @@
     <section class="minor-news-container">
       <!-- Minor news items -->
       <div class="minor-news">
-        <img src="/Users/johanna.eriksson@schibsted.com/Desktop/project-news-site/project-news-site/Assets/PIG.webp"
-          alt="Escape Artist: Pig" />
+        <img src="assets/PIG.webp" alt="Escape Artist: Pig" />
         <div class="minor-news-content">
           <h2>Escape Artist: Pig Breaks Free from Farm, Causes Havoc</h2>
           <p>Early this morning, a mischievous pig made a daring escape...</p>
@@ -46,9 +41,7 @@
       </div>
 
       <div class="minor-news">
-        <img
-          src="/Users/johanna.eriksson@schibsted.com/Desktop/project-news-site/project-news-site/Assets/Cow moooh.webp"
-          alt="Moo-dy Morning: Cow" />
+        <img src="assets/Cow moooh.webp" alt="Moo-dy Morning: Cow" />
         <div class="minor-news-content">
           <h2>Moo-dy Morning: Cow's Loud Mooing Wakes Up the Neighborhood</h2>
           <p>Residents of a quiet village were in for a surprise when a cow...</p>
@@ -57,8 +50,7 @@
       </div>
 
       <div class="minor-news">
-        <img src="/Users/johanna.eriksson@schibsted.com/Desktop/project-news-site/project-news-site/Assets/Horsie.webp"
-          alt="Unlikely Friends: Horse and Dog" />
+        <img src="assets/Horsie.webp" alt="Unlikely Friends: Horse and Dog" />
         <div class="minor-news-content">
           <h2>Unlikely Friends: Horse and Dog Form Heartwarming Bond</h2>
           <p>In a heartwarming display of friendship, a horse and a small dog...</p>
@@ -67,8 +59,7 @@
       </div>
 
       <div class="minor-news">
-        <img src="/Users/johanna.eriksson@schibsted.com/Desktop/project-news-site/project-news-site/Assets/Tractor.webp"
-          alt="Farm Mishap: Tractor" />
+        <img src="assets/Tractor.webp" alt="Farm Mishap: Tractor" />
         <div class="minor-news-content">
           <h2>Farm Mishap: Tractor Takes an Unexpected Detour into Ditch</h2>
           <p>A routine day on the farm took a turn when a tractor veered off...</p>
