--- a/code/index.html
+++ b/code/index.html
@@ -23,11 +23,11 @@
           </nav>
           <!-- menu tablet/mobile -->
           <nav class="nav-small-screen">
+            <p class="btn-nav">Log in</p>
             <ul>
-              <li class="nav-menu-item-desktop">---</li>
-              <li class="nav-menu-item-desktop">---</li>
-              <li class="nav-menu-item-desktop">---</li>
-              <li class="nav-menu-item-desktop btn-nav">Log in</li>
+              <li class="nav-menu-item-small-screen"></li>
+              <li class="nav-menu-item-small-screen"></li>
+              <li class="nav-menu-item-small-screen"></li>
             </ul>
           </nav>
       </div>
@@ -49,66 +49,90 @@
     </section>
 
     <!-- Divider h2 -->
-    <h2 class="divider-h2">Read more about seasonal vegetalbles and the color it brings our life!</h2>
+    <h2 class="divider-h2">Read more about seasonal vegetables and the color it brings our life!</h2>
 
     <section class="small-box-news">
       <!-- The other news  -->
-       <div class="small-box-news-item">
+      <div class="small-box-news-item">
           <img src="./assets/vegetable_1.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
+        <div>  
           <h3>Fresh from the yard!</h3>
           <p>Cabbage and peach.</p>
           <a href="#" target="_blank"><button class="small-news-btn">Crisp and sweet!</button></a>
-       </div>
+        </div>
+      </div>
 
-       <div class="small-box-news-item">
+      <div class="small-box-news-item">
         <img src="./assets/vegetable_2.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
-        <h3>Mediterranean platter!</h3>
-        <p>Chickpeas and greek yoghurt.</p>
-        <a href="#" target="_blank"><button class="small-news-btn">Indulge!</button></a>
+        <div>
+          <h3>Mediterranean platter!</h3>
+          <p>Chickpeas and greek yoghurt.</p>
+          <a href="#" target="_blank"><button class="small-news-btn">Indulge!</button></a>
+        </div>
        </div>
 
        <div class="small-box-news-item">
-          <img src="./assets/vegetable_1.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
-          <h3>Fresh from the yard!</h3>
-          <p>Cabbage and peach.</p>
-          <a href="#" target="_blank"><button class="small-news-btn">Crisp and sweet!</button></a>
+          <img src="./assets/vegetable_3.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
+          <div>
+            <h3>Crunchy and spicy!</h3>
+            <p>Broccoli and sriracha.</p>
+            <a href="#" target="_blank"><button class="small-news-btn">Fingerfood!</button></a>
+          </div>
+        </div>
+
+      <div class="small-box-news-item">
+        <img src="./assets/vegetable_4.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
+        <div>  
+          <h3>The soup of autumn!</h3>
+          <p>Soft asparagus.</p>
+          <a href="#" target="_blank"><button class="small-news-btn">Get warm!</button></a>
+        </div>
+      </div>
+
+      <div class="small-box-news-item">
+          <img src="./assets/vegetable_5.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
+          <div>
+            <h3>A mush of joy!</h3>
+            <p>Sundried tomatoes with crunch.</p>
+            <a href="#" target="_blank"><button class="small-news-btn">Summer in a bowl!</button></a>
+          </div>
+      </div>
+
+      <div class="small-box-news-item">
+        <img src="./assets/vegetable_6.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
+       <div>
+          <h3>Spicy, sweet and healty!</h3>
+          <p>Avocado, corn and chili.</p>
+          <a href="#" target="_blank"><button class="small-news-btn">All at once!</button></a>
+        </div>
+      </div>
+
+       <div class="small-box-news-item">
+          <img src="./assets/vegetable_7.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
+          <div>
+            <h3>Buretta me this!</h3>
+            <p>Cheesy buretta, sourdough and fresh tomatoes.</p>
+            <a href="#" target="_blank"><button class="small-news-btn">Cheese yourself!</button></a>
+          </div>
        </div>
 
        <div class="small-box-news-item">
-        <img src="./assets/vegetable_2.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
-        <h3>Mediterranean platter!</h3>
-        <p>Chickpeas and greek yoghurt.</p>
-        <a href="#" target="_blank"><button class="small-news-btn">Indulge!</button></a>
-       </div>
-
-       <div class="small-box-news-item">
-          <img src="./assets/vegetable_1.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
-          <h3>Fresh from the yard!</h3>
-          <p>Cabbage and peach.</p>
-          <a href="#" target="_blank"><button class="small-news-btn">Crisp and sweet!</button></a>
-       </div>
-
-       <div class="small-box-news-item">
-        <img src="./assets/vegetable_2.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
-        <h3>Mediterranean platter!</h3>
-        <p>Chickpeas and greek yoghurt.</p>
-        <a href="#" target="_blank"><button class="small-news-btn">Indulge!</button></a>
-       </div>
-
-       <div class="small-box-news-item">
-          <img src="./assets/vegetable_1.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
-          <h3>Fresh from the yard!</h3>
-          <p>Cabbage and peach.</p>
-          <a href="#" target="_blank"><button class="small-news-btn">Crisp and sweet!</button></a>
-       </div>
-
-       <div class="small-box-news-item">
-        <img src="./assets/vegetable_2.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
-        <h3>Mediterranean platter!</h3>
-        <p>Chickpeas and greek yoghurt.</p>
-        <a href="#" target="_blank"><button class="small-news-btn">Indulge!</button></a>
+        <img src="./assets/vegetables_8.jpg" class="small-box-news-item-img" alt="Vegetables good for you and the earth">
+          <div>
+            <h3>Green queen with heat!</h3>
+            <p>Cheesy spinach with greek yoghurt.</p>
+            <a href="#" target="_blank"><button class="small-news-btn">Get strong!</button></a>
+          </div>
        </div>
     </section>
+
+    <div class="flex-div-sign-up">
+      <h2 class="sign-up-h2">Sign up on our popular farmers and cooking classes below:</h2>
+      <div class="flex-btns-sign-up">
+        <a href="#" target="_blank"><button class="small-news-btn">Cooking<br> course</button></a>
+        <a href="#" target="_blank"><button class="small-news-btn">Vegetables farming<br> course</button></a>
+      </div>
+    </div>
 
     <footer>
       <div>
